yiltc-v0.2-backup/testsuite/negative/c_style_or.yilt
// Negative: C-style || operator is rejected; use `or` keyword instead.
fn main()
    let a = true
    let b = false
    if a || b
        print("nope")
